--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,7 @@
+stages:
+  - build
+  - tests
+
 build:
   stage: build
   image: node:12
@@ -12,5 +16,17 @@ build:
     expire_in: 1 hour
     paths:
       - dist/my-app
+  only:
+    - master
+tests:
+  stage: tests
+  image: node:12
+  script:
+    - npm install
+    - npm install -g @angular/cli
+    - ng build
+  cache:
+    paths:
+      - ./node_modules
   only:
     - master
