--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,33 +1,33 @@
 stages:
-  - build
   - tests
+  #- build
 
-build:
-  stage: build
-  image: node:12
-  script:
-    - npm install
-    - npm install -g @angular/cli
-    - ng build
-  cache:
-    paths:
-      - ./node_modules
-  artifacts:
-    expire_in: 1 hour
-    paths:
-      - dist/my-app
-  only:
-    - master
+#build:
+#  stage: build
+#  image: node:12
+#  script:
+#    - npm install
+#    - npm install -g @angular/cli
+#    - ng build
+#   cache:
+#     paths:
+#       - ./node_modules
+#  artifacts:
+#    expire_in: 1 hour
+#    paths:
+#      - dist/my-app
+#  only:
+#    - master
+
 tests:
   stage: tests
   image: circleci/node:12-browsers
   script:
     - npm install
-    - npm install -g @angular/cli
-    - ng test --no-watch --browsers=ChromeHeadlessCI
-    # - ng build
-  cache:
-    paths:
-      - ./node_modules
+    - sudo npm install -g @angular/cli
+    - ng test --no-watch --no-progress --browsers=ChromeHeadlessCI
+  # cache:
+  #   paths:
+  #     - ./node_modules
   only:
     - master
